# TiKey

./: Cargo.toml  readme.md
src/: client.rs  dialect.rs  display.rs  lib.rs  main.rs  registry.rs
src/rules/: foreign_key.rs  function.rs  h1_function.rs  h2_trigger.rs  h3_event.rs  h4_procedure.rs  h5_fulltext.rs  h6_savepoint.rs  h7_xa.rs  m1_foreign_key.rs  m2_mysql_function.rs  m3_spatial.rs  m4_charset.rs  m5_sys_schema.rs  m6_optim_trace.rs  m7_column_privilege.rs  mod.rs  s1_unknown.rs  s2_delimiter.rs  s3_end_early.rs  trigger.rs
test/bad/: foreign_key.sql  fulltext_search.sql  function.sql  spatial.sql  stored_procedure.sql  trigger.sql
tests/: test_error.rs  test_integration.rs  test_warning.rs
tests/error/: charset.sql  column_privilege.sql  event.sql  fulltext.sql  function.sql  function_call.sql  mysql_function.sql  optimizer_trace.sql  procedure.sql  save_point.sql  spatial.sql  sys_schema.sql
tests/practice/: readme.md
tests/practice/Chapter10/: ch10_01_Joining_two_tables.sql  ch10_02_LEFT_JOIN_versus_INNER_JOIN.sql  ch10_03_Subquery.sql  ch10_04_Common_Table_Expression.sql  ch10_05_Recursive_CTE.sql  ch10_06_Explain.sql
tests/practice/Chapter11/: ch11_05_Multi_table_UPDATE.sql
tests/practice/Chapter14/: Lookup and ErrorLog structure.sql
tests/practice/Chapter9/: ch09_Using_functions_on_data.sql
tests/warning/: create_select.sql  delimiter_bad.sql  delimiter_good.sql  unknown.sql
