[package]
name = "linti"
version = "0.1.0"
authors = ["cutecutecat <starkind1997@gmail.com>"]
edition = "2021"
description = "Distributed cloud native storage system"
repository = "https://github.com/cutecutecat/LinTi"
readme = "README.md"
license = "MIT"
keywords = ["Database", "lint"]
categories = ["filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = { git = "https://github.com/sqlparser-rs/sqlparser-rs.git", tag = "v0.25.0" , features = ["serde"]}
once_cell = "1.15.0"
serde_json = "1.0.87"
